--- a/index.html
+++ b/index.html
@@ -300,6 +300,7 @@
             </div>
         </div>
     </div>
-    <script defer src="js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
